--- a/dataexcelizer/package.json
+++ b/dataexcelizer/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "logger": "^0.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-top-progress-bar": "^1.0.33",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
